# openapi.yaml
@@ -8,16 +8,27 @@ info:
 servers:
   - url: http://localhost:3000
 
+tags:
+  - name: Authors
+    description: Gestión de autores
+
+  - name: Posts
+    description: Gestión de posts del blog
+
 paths:
 
   /authors:
     get:
+      tags:
+        - Authors
       summary: Obtener todos los autores
       responses:
         '200':
           description: Lista de autores
 
     post:
+      tags:
+        - Authors
       summary: Crear autor
       requestBody:
         required: true
@@ -42,6 +53,8 @@ paths:
 
   /authors/{id}:
     get:
+      tags:
+        - Authors
       summary: Obtener autor por ID
       parameters:
         - in: path
@@ -54,6 +67,8 @@ paths:
           description: Autor encontrado
 
     put:
+      tags:
+        - Authors
       summary: Actualizar autor
       parameters:
         - in: path
@@ -66,6 +81,8 @@ paths:
           description: Autor actualizado
 
     delete:
+      tags:
+        - Authors
       summary: Eliminar autor
       parameters:
         - in: path
@@ -79,12 +96,16 @@ paths:
 
   /posts:
     get:
+      tags:
+        - Posts
       summary: Obtener todos los posts
       responses:
         '200':
           description: Lista de posts
 
     post:
+      tags:
+        - Posts
       summary: Crear post
       requestBody:
         required: true
@@ -112,6 +133,8 @@ paths:
 
   /posts/{id}:
     get:
+      tags:
+        - Posts
       summary: Obtener post por ID
       parameters:
         - in: path
@@ -124,6 +147,8 @@ paths:
           description: Post encontrado
 
     put:
+      tags:
+        - Posts
       summary: Actualizar post
       parameters:
         - in: path
@@ -136,6 +161,8 @@ paths:
           description: Post actualizado
 
     delete:
+      tags:
+        - Posts
       summary: Eliminar post
       parameters:
         - in: path
@@ -149,6 +176,8 @@ paths:
 
   /posts/author/{authorId}:
     get:
+      tags:
+        - Posts
       summary: Obtener posts de un autor con detalle del author
       parameters:
         - in: path
